kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: registry.digitalocean.com/todos/backend@sha256:550ea070063f7970d2e11bbfc20c35ab99d24176b6d272b081ceb19ef177193c
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
