kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: backend
          image: registry.digitalocean.com/todos/frontend@sha256:912acb7f87680a100de3cc7c845695e4ed28a30e749c66739f92d3a7a494d4f5
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 80
