kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
