kubernetes/ingress.yml
# need to run the following first
# helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
# helm repo update
# helm install nginx-ingress ingress-nginx/ingress-nginx --set controller.publishService.enabled=true
# kubectl --namespace default get services -o wide -w nginx-ingress-ingress-nginx-controller
# wait for external ip to be available
# kubectl create namespace cert-manager
# helm repo add jetstack https://charts.jetstack.io
# helm repo update
# helm install cert-manager jetstack/cert-manager --namespace cert-manager --version v1.6.1 --set installCRDs=true
# uncomment lines below and rerun this stuff
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  #tls:
  #- hosts:
  #  - presidentialtodos.com
  #  - www.presidentialtodos.com
  #  secretName: kubernetes-tls
  rules:
  - host: "presidentialtodos.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: "www.presidentialtodos.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
